err/flask-turbo-boost.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask_Turbo_Boost-0.0.11.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/flask_turbo_boost'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/controllers'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/forms'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/macros'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/macros/user'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/macros/user/users'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/models'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/account'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/account/signin'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/account/signup'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/security'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/site'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/site/403'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/site/404'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/site/500'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/site/about'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/pages/site/index'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static/css'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static/css/libs'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static/fonts'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static/image'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static/js'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/static/js/libs'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/application/utils'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/config'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/db'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/deploy'...
Compiling './lib/python3.5/site-packages/flask_turbo_boost/project/manage.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/project/manage.py", line 82
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/flask_turbo_boost/project/migrations'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/migrations/versions'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/project/scripts'...
Compiling './lib/python3.5/site-packages/flask_turbo_boost/project/scripts/admin.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/project/scripts/admin.py", line 21
    print "cannot create role"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/flask_turbo_boost/project/scripts/form.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/project/scripts/form.py", line 64
    print temp.render(model_name=model.__name__, columns=meta, slug=_slug)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_turbo_boost/project/tests'...
Listing './lib/python3.5/site-packages/flask_turbo_boost/templates'...
Compiling './lib/python3.5/site-packages/flask_turbo_boost/templates/action.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/templates/action.py", line 4
    def #{action}():
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flask_turbo_boost/templates/action_without_template.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/templates/action_without_template.py", line 4
    def #{action}():
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flask_turbo_boost/templates/model.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/templates/model.py", line 6
    class #{model|title}(db.Model):
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flask_turbo_boost/templates/unittest.py'...
***   File "./lib/python3.5/site-packages/flask_turbo_boost/templates/unittest.py", line 5
    class Test#{controller|title}(BaseSuite):
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
